{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 67,
  "lineage": "187b5af9-cc52-9d46-b492-4fca39a1aeab",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:839712734073:loadbalancer/app/myapp-load-balancer/4e350f176204ecf1",
            "arn_suffix": "app/myapp-load-balancer/4e350f176204ecf1",
            "dns_name": "myapp-load-balancer-1637776614.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:839712734073:loadbalancer/app/myapp-load-balancer/4e350f176204ecf1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myapp-load-balancer",
            "security_groups": [
              "sg-0e51ac005097a1686"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02b4864bd4d71337a"
              },
              {
                "subnet_id": "subnet-0ad36c491ccfbbecd"
              }
            ],
            "subnets": [
              "subnet-02b4864bd4d71337a",
              "subnet-0ad36c491ccfbbecd"
            ],
            "tags": {
              "Name": "main-alb"
            },
            "vpc_id": "vpc-008116962b192273e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.lb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:839712734073:listener/app/myapp-load-balancer/4e350f176204ecf1/f5b8b245cd55a3dc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:839712734073:targetgroup/myapp-target-group/40558a382eb0ae1c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:839712734073:listener/app/myapp-load-balancer/4e350f176204ecf1/f5b8b245cd55a3dc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:839712734073:loadbalancer/app/myapp-load-balancer/4e350f176204ecf1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.main",
            "module.alb.aws_alb_target_group.app",
            "module.alb.aws_security_group.lb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:839712734073:targetgroup/myapp-target-group/40558a382eb0ae1c",
            "arn_suffix": "targetgroup/myapp-target-group/40558a382eb0ae1c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:839712734073:targetgroup/myapp-target-group/40558a382eb0ae1c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "myapp-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-008116962b192273e"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839712734073:security-group/sg-0e51ac005097a1686",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e51ac005097a1686",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myapp-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "839712734073",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-008116962b192273e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839712734073:security-group/sg-070204c3db25ed967",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070204c3db25ed967",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-security",
            "name_prefix": "",
            "owner_id": "839712734073",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-008116962b192273e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d232517f0d342ca7",
            "domain": "vpc",
            "id": "eipalloc-04e861391991c3135",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a4fec93d10fa2cdf",
            "private_dns": "ip-10-123-2-238.ec2.internal",
            "private_ip": "10.123.2.238",
            "public_dns": "ec2-54-221-190-106.compute-1.amazonaws.com",
            "public_ip": "54.221.190.106",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04d5fe272d48c71b5",
            "domain": "vpc",
            "id": "eipalloc-0c385d45822699a92",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09ab1c405754a38dc",
            "private_dns": "ip-10-123-3-241.ec2.internal",
            "private_ip": "10.123.3.241",
            "public_dns": "ec2-52-22-139-83.compute-1.amazonaws.com",
            "public_ip": "52.22.139.83",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839712734073:internet-gateway/igw-04f3b1acb2c6aa2c4",
            "id": "igw-04f3b1acb2c6aa2c4",
            "owner_id": "839712734073",
            "tags": {
              "Name": "tf-igw"
            },
            "vpc_id": "vpc-008116962b192273e"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e861391991c3135",
            "id": "nat-028f1f5e88b9620aa",
            "network_interface_id": "eni-0a4fec93d10fa2cdf",
            "private_ip": "10.123.2.238",
            "public_ip": "54.221.190.106",
            "subnet_id": "subnet-02b4864bd4d71337a",
            "tags": {
              "Name": "nat-gw-1"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c385d45822699a92",
            "id": "nat-038200168d35cf38e",
            "network_interface_id": "eni-09ab1c405754a38dc",
            "private_ip": "10.123.3.241",
            "public_ip": "52.22.139.83",
            "subnet_id": "subnet-0ad36c491ccfbbecd",
            "tags": {
              "Name": "nat-gw-2"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04f3b1acb2c6aa2c4",
            "id": "r-rtb-0fe91c14277d8766f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe91c14277d8766f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e398ba7bddb4fa66",
            "owner_id": "839712734073",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-028f1f5e88b9620aa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-1"
            },
            "vpc_id": "vpc-008116962b192273e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.gw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0830cbc07d1ce2804",
            "owner_id": "839712734073",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-038200168d35cf38e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-2"
            },
            "vpc_id": "vpc-008116962b192273e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.gw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fe91c14277d8766f",
            "owner_id": "839712734073",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f3b1acb2c6aa2c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "vpc_id": "vpc-008116962b192273e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb09c0f71df549cf",
            "route_table_id": "rtb-0e398ba7bddb4fa66",
            "subnet_id": "subnet-0fbf36b64668d2963"
          },
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.gw",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ca1136d746aaccc",
            "route_table_id": "rtb-0830cbc07d1ce2804",
            "subnet_id": "subnet-08dc13986948326bd"
          },
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.gw",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0667bfb4bba468bcf",
            "route_table_id": "rtb-0fe91c14277d8766f",
            "subnet_id": "subnet-02b4864bd4d71337a"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfc95e683fd90779",
            "route_table_id": "rtb-0fe91c14277d8766f",
            "subnet_id": "subnet-0ad36c491ccfbbecd"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839712734073:subnet/subnet-0fbf36b64668d2963",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.123.0.0/24",
            "id": "subnet-0fbf36b64668d2963",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839712734073",
            "tags": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-008116962b192273e"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839712734073:subnet/subnet-08dc13986948326bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.123.1.0/24",
            "id": "subnet-08dc13986948326bd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839712734073",
            "tags": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-008116962b192273e"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839712734073:subnet/subnet-02b4864bd4d71337a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.123.2.0/24",
            "id": "subnet-02b4864bd4d71337a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839712734073",
            "tags": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-008116962b192273e"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839712734073:subnet/subnet-0ad36c491ccfbbecd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.123.3.0/24",
            "id": "subnet-0ad36c491ccfbbecd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839712734073",
            "tags": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-008116962b192273e"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:839712734073:vpc/vpc-008116962b192273e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-08433f4f26291a913",
            "default_route_table_id": "rtb-0e0640c46622f359f",
            "default_security_group_id": "sg-0494d8a92d8e4774e",
            "dhcp_options_id": "dopt-033aeee14cc7e7ea7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-008116962b192273e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e0640c46622f359f",
            "owner_id": "839712734073",
            "tags": {
              "Name": "vpc-main"
            }
          }
        }
      ]
    }
  ]
}